--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,41 @@ header img {
     height: 70px;
     width: 70px;
 }
+
+/*Conteudo principal*/
+main {
+    min-height: 500px;
+}
+
+
+/*banner*/
+#section-banner img {
+    height: 500px;
+}
+
+/*Produtos vendidos*/
+#section-vendidos {
+    text-align: center;
+}
+
+#section-vendidos h2 {
+    font-weight: bold;
+    padding: 20px;
+}
+
+#section-vendidos img {
+    height: 300px;
+    border-radius: 10px;
+}
+
+#section-vendidos .card {
+    margin: 5px;
+    border: 1px sold #ccc;
+    border-radius: 10px;
+}
+
+#section-vendidos .preco {
+    color:red;
+    font-size: 18px;
+    font-weight: bold;
+}
