--- a/css/style.css
+++ b/css/style.css
@@ -41,3 +41,13 @@ main {
     font-size: 18px;
     font-weight: bold;
 }
+
+/*Rodapé*/
+footer {
+    text-align: center;
+}
+
+footer p {
+    font-weight: bold;
+    padding: 10px;
+}
