--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,10 @@ footer p {
     font-weight: bold;
     padding: 10px;
 }
+
+/*Botão Voltar topo*/
+
+/* página de login  */
+
+
+/* Formulário de cadastro*/
